# pandorabox

./: .env.dev  .env.prod  .env.staging  .env.test  .env.test-ci  .gitignore  Makefile  composer.json  ecr-build.py  ecr-pull.py  ecr-push.py  ecr-tag.py  get-community.py  get-modules-codebuild.py  get-officials.py  git-clone.py  module_community.lst  module_officials.lst  phpunit.xml
.github/workflows/: ci.yml
Enums/: AiTextServices.php
Modules/OpenAI/: composer.json
Modules/OpenAI/Ask/: Askme.php
Modules/OpenAI/Config/: config.php
Modules/OpenAI/DataTables/: ChatBotsDataTable.php
Modules/OpenAI/Entities/: ContentType.php  ContentTypeMeta.php  UseCase.php  UseCaseCategory.php
Modules/OpenAI/Filters/: AudioFilter.php  ChatBotFilter.php  CodeFilter.php  ContentFilter.php  ImageFilter.php  SpeechFilter.php  UseCaseFilter.php  VoiceFilter.php
Modules/OpenAI/Libraries/: Openai.php  Stablediffusion.php
compose/: docker-compose.yml
compose/docker/ubuntu-mariadb/: Dockerfile  Makefile.am  Makefile.in  docker-build.sh  docker-push.sh
helm/helmfile/: laravel-template.yml  laravel-values.yml  manifest-laravel-secret.yml  mariadb-values.yml
helm/templates/: helm-pack-lab.py  helm-push-lab.py
src/App/: Application.php  HttpKernel.php
tools/01_phpunit/: composer.json
tools/02_phpstan/: composer.json
tools/03_ecs/: composer.json
tools/04_php-coveralls/: composer.json
tools/05_phpinsights/: composer.json
tools/06_phpmd/: composer.json
tools/07_phpmetrics/: composer.json
tools/08_rector/: composer.json
tools/09_composer/: composer.json
(+157 files in other folders)
